<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="laktionov.lifetracker.activity.MainActivity">

    <item
        android:id="@+id/action_chat"
        android:icon="@drawable/ic_chat_bubble_white_18dp"
        android:orderInCategory="100"
        android:title="@string/menu_messages"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_white_18dp"
        android:orderInCategory="100"
        android:title="@string/menu_share"
        app:showAsAction="ifRoom" />
    <group
        android:id="@+id/action_settings"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom">
        <item
            android:id="@+id/action_notify"
            android:checkable="true"
            android:title="@string/menu_notify" />

        <item
            android:id="@+id/action_pick_time"
            android:title="@string/menu_pick_date" />

    </group>


</menu>
